# Tictactoe

./: CMakeLists.txt  Makefile  README.MD  README.md
client/: CMakeLists.txt  main.cpp
init/: init.sql
server/: CMakeLists.txt  main.cpp
